Fix ruins/mountain icons invisible in production build

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1643,6 +1643,33 @@ DESKTOP TWO-COLUMN LAYOUT (≥ 900px wide)
     width: 50%;
     height: 50%;
   }
+
+  /* Desktop board icon sizes (board ≈ 55vw) */
+  .game-square.monster::before {
+    background-size: 3.5vw 3.4vw;
+    width: 3.5vw;
+    height: 3.4vw;
+    top: 0.4vw;
+    left: 0.5vw;
+  }
+
+  .game-square.ruins::after {
+    background-size: 2.3vw 2.4vw;
+    width: 2.3vw;
+    height: 2.4vw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .game-square.mountain::after {
+    background-size: 2.6vw 2.4vw;
+    width: 2.6vw;
+    height: 2.5vw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 /* Switch page container to CSS Grid */
@@ -1774,16 +1801,4 @@ DESKTOP TWO-COLUMN LAYOUT (≥ 900px wide)
   height: 3.4vw;
   top: 0.4vw;
   left: 0.5vw;
-}
-
-.game-square.ruins::after {
-  background-size: 2.3vw 2.4vw;
-  width: 2.3vw;
-  height: 2.4vw;
-}
-
-.game-square.mountain::after {
-  background-size: 2.6vw 2.4vw;
-  width: 2.6vw;
-  height: 2.5vw;
 }
